PROJETO_PLC/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID ; vars lista_subprogramas conteudo .
Rule 2     conteudo -> BEGIN lista_comandos END
Rule 3     lista_subprogramas -> lista_subprogramas subprograma
Rule 4     lista_subprogramas -> <empty>
Rule 5     subprograma -> decl_function
Rule 6     subprograma -> decl_procedure
Rule 7     decl_function -> FUNCTION ID ( args_opt ) : tipo ; vars conteudo ;
Rule 8     decl_procedure -> PROCEDURE ID ( args_opt ) ; vars conteudo ;
Rule 9     args_opt -> lista_args
Rule 10    args_opt -> <empty>
Rule 11    lista_args -> lista_args ; arg_grupo
Rule 12    lista_args -> arg_grupo
Rule 13    arg_grupo -> lista_ids : tipo
Rule 14    vars -> VAR lista_vars
Rule 15    vars -> <empty>
Rule 16    lista_vars -> lista_vars decl_var
Rule 17    lista_vars -> decl_var
Rule 18    decl_var -> lista_ids : tipo ;
Rule 19    lista_ids -> lista_ids , ID
Rule 20    lista_ids -> ID
Rule 21    tipo -> INTEGER
Rule 22    tipo -> BOOLEAN
Rule 23    tipo -> REAL
Rule 24    tipo -> STRING
Rule 25    tipo -> ARRAY [ tam ] OF tipo
Rule 26    tam -> INT_VAL RANGE INT_VAL
Rule 27    lista_comandos -> lista_comandos ; comando
Rule 28    lista_comandos -> comando
Rule 29    comando -> assignment
Rule 30    comando -> procedure_call
Rule 31    comando -> if_comando
Rule 32    comando -> while_comando
Rule 33    comando -> for_comando
Rule 34    comando -> io_comando
Rule 35    comando -> repeat_comando
Rule 36    comando -> conteudo
Rule 37    comando -> <empty>
Rule 38    assignment -> variavel ASSIGN exp
Rule 39    variavel -> ID
Rule 40    variavel -> ID [ exp ]
Rule 41    procedure_call -> ID ( args_subp )
Rule 42    args_subp -> lista_exp
Rule 43    args_subp -> <empty>
Rule 44    if_comando -> IF exp THEN comando
Rule 45    if_comando -> IF exp THEN comando ELSE comando
Rule 46    while_comando -> WHILE exp DO comando
Rule 47    for_comando -> FOR ID ASSIGN exp TO exp DO comando
Rule 48    for_comando -> FOR ID ASSIGN exp DOWNTO exp DO comando
Rule 49    io_comando -> WRITELN ( lista_exp )
Rule 50    io_comando -> WRITELN
Rule 51    io_comando -> WRITELN ( )
Rule 52    io_comando -> READLN ( variavel )
Rule 53    io_comando -> READLN
Rule 54    io_comando -> READLN ( )
Rule 55    repeat_comando -> REPEAT lista_comandos UNTIL exp
Rule 56    lista_exp -> lista_exp , exp
Rule 57    lista_exp -> exp
Rule 58    exp -> exp_simples
Rule 59    exp -> exp_simples = exp_simples
Rule 60    exp -> exp_simples NEQ exp_simples
Rule 61    exp -> exp_simples < exp_simples
Rule 62    exp -> exp_simples > exp_simples
Rule 63    exp -> exp_simples LE exp_simples
Rule 64    exp -> exp_simples GE exp_simples
Rule 65    exp_simples -> exp_simples + term
Rule 66    exp_simples -> exp_simples - term
Rule 67    exp_simples -> exp_simples OR term
Rule 68    exp_simples -> term
Rule 69    term -> term * factor
Rule 70    term -> term / factor
Rule 71    term -> term DIV factor
Rule 72    term -> term MOD factor
Rule 73    term -> term AND factor
Rule 74    term -> factor
Rule 75    factor -> variavel
Rule 76    factor -> INT_VAL
Rule 77    factor -> REAL_VAL
Rule 78    factor -> STRING_LITERAL
Rule 79    factor -> TRUE
Rule 80    factor -> FALSE
Rule 81    factor -> ( exp )
Rule 82    factor -> NOT factor
Rule 83    factor -> - factor
Rule 84    factor -> LENGTH ( exp )
Rule 85    factor -> function_call
Rule 86    function_call -> ID ( args_subp )

Terminals, with rules where they appear

(                    : 7 8 41 49 51 52 54 81 84 86
)                    : 7 8 41 49 51 52 54 81 84 86
*                    : 69
+                    : 65
,                    : 19 56
-                    : 66 83
.                    : 1
/                    : 70
:                    : 7 13 18
;                    : 1 7 7 8 8 11 18 27
<                    : 61
=                    : 59
>                    : 62
AND                  : 73
ARRAY                : 25
ASSIGN               : 38 47 48
BEGIN                : 2
BOOLEAN              : 22
DIV                  : 71
DO                   : 46 47 48
DOWNTO               : 48
ELSE                 : 45
END                  : 2
FALSE                : 80
FOR                  : 47 48
FUNCTION             : 7
GE                   : 64
ID                   : 1 7 8 19 20 39 40 41 47 48 86
IF                   : 44 45
INTEGER              : 21
INT_VAL              : 26 26 76
LE                   : 63
LENGTH               : 84
MOD                  : 72
NEQ                  : 60
NOT                  : 82
OF                   : 25
OR                   : 67
PROCEDURE            : 8
PROGRAM              : 1
RANGE                : 26
READLN               : 52 53 54
REAL                 : 23
REAL_VAL             : 77
REPEAT               : 55
STRING               : 24
STRING_LITERAL       : 78
THEN                 : 44 45
TO                   : 47
TRUE                 : 79
UNTIL                : 55
VAR                  : 14
WHILE                : 46
WRITELN              : 49 50 51
[                    : 25 40
]                    : 25 40
error                : 

Nonterminals, with rules where they appear

arg_grupo            : 11 12
args_opt             : 7 8
args_subp            : 41 86
assignment           : 29
comando              : 27 28 44 45 45 46 47 48
conteudo             : 1 7 8 36
decl_function        : 5
decl_procedure       : 6
decl_var             : 16 17
exp                  : 38 40 44 45 46 47 47 48 48 55 56 57 81 84
exp_simples          : 58 59 59 60 60 61 61 62 62 63 63 64 64 65 66 67
factor               : 69 70 71 72 73 74 82 83
for_comando          : 33
function_call        : 85
if_comando           : 31
io_comando           : 34
lista_args           : 9 11
lista_comandos       : 2 27 55
lista_exp            : 42 49 56
lista_ids            : 13 18 19
lista_subprogramas   : 1 3
lista_vars           : 14 16
procedure_call       : 30
program              : 0
repeat_comando       : 35
subprograma          : 3
tam                  : 25
term                 : 65 66 67 68 69 70 71 72 73
tipo                 : 7 13 18 25
variavel             : 38 52 75
vars                 : 1 7 8
while_comando        : 32

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID ; vars lista_subprogramas conteudo .

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID ; vars lista_subprogramas conteudo .

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . ; vars lista_subprogramas conteudo .

    ;               shift and go to state 4


state 4

    (1) program -> PROGRAM ID ; . vars lista_subprogramas conteudo .
    (14) vars -> . VAR lista_vars
    (15) vars -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 15 (vars -> .)
    FUNCTION        reduce using rule 15 (vars -> .)
    PROCEDURE       reduce using rule 15 (vars -> .)

    vars                           shift and go to state 5

state 5

    (1) program -> PROGRAM ID ; vars . lista_subprogramas conteudo .
    (3) lista_subprogramas -> . lista_subprogramas subprograma
    (4) lista_subprogramas -> .

    BEGIN           reduce using rule 4 (lista_subprogramas -> .)
    FUNCTION        reduce using rule 4 (lista_subprogramas -> .)
    PROCEDURE       reduce using rule 4 (lista_subprogramas -> .)

    lista_subprogramas             shift and go to state 7

state 6

    (14) vars -> VAR . lista_vars
    (16) lista_vars -> . lista_vars decl_var
    (17) lista_vars -> . decl_var
    (18) decl_var -> . lista_ids : tipo ;
    (19) lista_ids -> . lista_ids , ID
    (20) lista_ids -> . ID

    ID              shift and go to state 11

    lista_vars                     shift and go to state 8
    decl_var                       shift and go to state 9
    lista_ids                      shift and go to state 10

state 7

    (1) program -> PROGRAM ID ; vars lista_subprogramas . conteudo .
    (3) lista_subprogramas -> lista_subprogramas . subprograma
    (2) conteudo -> . BEGIN lista_comandos END
    (5) subprograma -> . decl_function
    (6) subprograma -> . decl_procedure
    (7) decl_function -> . FUNCTION ID ( args_opt ) : tipo ; vars conteudo ;
    (8) decl_procedure -> . PROCEDURE ID ( args_opt ) ; vars conteudo ;

    BEGIN           shift and go to state 14
    FUNCTION        shift and go to state 17
    PROCEDURE       shift and go to state 18

    conteudo                       shift and go to state 12
    subprograma                    shift and go to state 13
    decl_function                  shift and go to state 15
    decl_procedure                 shift and go to state 16

state 8

    (14) vars -> VAR lista_vars .
    (16) lista_vars -> lista_vars . decl_var
    (18) decl_var -> . lista_ids : tipo ;
    (19) lista_ids -> . lista_ids , ID
    (20) lista_ids -> . ID

    BEGIN           reduce using rule 14 (vars -> VAR lista_vars .)
    FUNCTION        reduce using rule 14 (vars -> VAR lista_vars .)
    PROCEDURE       reduce using rule 14 (vars -> VAR lista_vars .)
    ID              shift and go to state 11

    decl_var                       shift and go to state 19
    lista_ids                      shift and go to state 10

state 9

    (17) lista_vars -> decl_var .

    ID              reduce using rule 17 (lista_vars -> decl_var .)
    BEGIN           reduce using rule 17 (lista_vars -> decl_var .)
    FUNCTION        reduce using rule 17 (lista_vars -> decl_var .)
    PROCEDURE       reduce using rule 17 (lista_vars -> decl_var .)


state 10

    (18) decl_var -> lista_ids . : tipo ;
    (19) lista_ids -> lista_ids . , ID

    :               shift and go to state 20
    ,               shift and go to state 21


state 11

    (20) lista_ids -> ID .

    :               reduce using rule 20 (lista_ids -> ID .)
    ,               reduce using rule 20 (lista_ids -> ID .)


state 12

    (1) program -> PROGRAM ID ; vars lista_subprogramas conteudo . .

    .               shift and go to state 22


state 13

    (3) lista_subprogramas -> lista_subprogramas subprograma .

    BEGIN           reduce using rule 3 (lista_subprogramas -> lista_subprogramas subprograma .)
    FUNCTION        reduce using rule 3 (lista_subprogramas -> lista_subprogramas subprograma .)
    PROCEDURE       reduce using rule 3 (lista_subprogramas -> lista_subprogramas subprograma .)


state 14

    (2) conteudo -> BEGIN . lista_comandos END
    (27) lista_comandos -> . lista_comandos ; comando
    (28) lista_comandos -> . comando
    (29) comando -> . assignment
    (30) comando -> . procedure_call
    (31) comando -> . if_comando
    (32) comando -> . while_comando
    (33) comando -> . for_comando
    (34) comando -> . io_comando
    (35) comando -> . repeat_comando
    (36) comando -> . conteudo
    (37) comando -> .
    (38) assignment -> . variavel ASSIGN exp
    (41) procedure_call -> . ID ( args_subp )
    (44) if_comando -> . IF exp THEN comando
    (45) if_comando -> . IF exp THEN comando ELSE comando
    (46) while_comando -> . WHILE exp DO comando
    (47) for_comando -> . FOR ID ASSIGN exp TO exp DO comando
    (48) for_comando -> . FOR ID ASSIGN exp DOWNTO exp DO comando
    (49) io_comando -> . WRITELN ( lista_exp )
    (50) io_comando -> . WRITELN
    (51) io_comando -> . WRITELN ( )
    (52) io_comando -> . READLN ( variavel )
    (53) io_comando -> . READLN
    (54) io_comando -> . READLN ( )
    (55) repeat_comando -> . REPEAT lista_comandos UNTIL exp
    (2) conteudo -> . BEGIN lista_comandos END
    (39) variavel -> . ID
    (40) variavel -> . ID [ exp ]

    END             reduce using rule 37 (comando -> .)
    ;               reduce using rule 37 (comando -> .)
    ID              shift and go to state 34
    IF              shift and go to state 35
    WHILE           shift and go to state 36
    FOR             shift and go to state 37
    WRITELN         shift and go to state 38
    READLN          shift and go to state 39
    REPEAT          shift and go to state 40
    BEGIN           shift and go to state 14

    lista_comandos                 shift and go to state 23
    comando                        shift and go to state 24
    assignment                     shift and go to state 25
    procedure_call                 shift and go to state 26
    if_comando                     shift and go to state 27
    while_comando                  shift and go to state 28
    for_comando                    shift and go to state 29
    io_comando                     shift and go to state 30
    repeat_comando                 shift and go to state 31
    conteudo                       shift and go to state 32
    variavel                       shift and go to state 33

state 15

    (5) subprograma -> decl_function .

    BEGIN           reduce using rule 5 (subprograma -> decl_function .)
    FUNCTION        reduce using rule 5 (subprograma -> decl_function .)
    PROCEDURE       reduce using rule 5 (subprograma -> decl_function .)


state 16

    (6) subprograma -> decl_procedure .

    BEGIN           reduce using rule 6 (subprograma -> decl_procedure .)
    FUNCTION        reduce using rule 6 (subprograma -> decl_procedure .)
    PROCEDURE       reduce using rule 6 (subprograma -> decl_procedure .)


state 17

    (7) decl_function -> FUNCTION . ID ( args_opt ) : tipo ; vars conteudo ;

    ID              shift and go to state 41


state 18

    (8) decl_procedure -> PROCEDURE . ID ( args_opt ) ; vars conteudo ;

    ID              shift and go to state 42


state 19

    (16) lista_vars -> lista_vars decl_var .

    ID              reduce using rule 16 (lista_vars -> lista_vars decl_var .)
    BEGIN           reduce using rule 16 (lista_vars -> lista_vars decl_var .)
    FUNCTION        reduce using rule 16 (lista_vars -> lista_vars decl_var .)
    PROCEDURE       reduce using rule 16 (lista_vars -> lista_vars decl_var .)


state 20

    (18) decl_var -> lista_ids : . tipo ;
    (21) tipo -> . INTEGER
    (22) tipo -> . BOOLEAN
    (23) tipo -> . REAL
    (24) tipo -> . STRING
    (25) tipo -> . ARRAY [ tam ] OF tipo

    INTEGER         shift and go to state 44
    BOOLEAN         shift and go to state 45
    REAL            shift and go to state 46
    STRING          shift and go to state 47
    ARRAY           shift and go to state 48

    tipo                           shift and go to state 43

state 21

    (19) lista_ids -> lista_ids , . ID

    ID              shift and go to state 49


state 22

    (1) program -> PROGRAM ID ; vars lista_subprogramas conteudo . .

    $end            reduce using rule 1 (program -> PROGRAM ID ; vars lista_subprogramas conteudo . .)


state 23

    (2) conteudo -> BEGIN lista_comandos . END
    (27) lista_comandos -> lista_comandos . ; comando

    END             shift and go to state 50
    ;               shift and go to state 51


state 24

    (28) lista_comandos -> comando .

    END             reduce using rule 28 (lista_comandos -> comando .)
    ;               reduce using rule 28 (lista_comandos -> comando .)
    UNTIL           reduce using rule 28 (lista_comandos -> comando .)


state 25

    (29) comando -> assignment .

    END             reduce using rule 29 (comando -> assignment .)
    ;               reduce using rule 29 (comando -> assignment .)
    UNTIL           reduce using rule 29 (comando -> assignment .)
    ELSE            reduce using rule 29 (comando -> assignment .)


state 26

    (30) comando -> procedure_call .

    END             reduce using rule 30 (comando -> procedure_call .)
    ;               reduce using rule 30 (comando -> procedure_call .)
    UNTIL           reduce using rule 30 (comando -> procedure_call .)
    ELSE            reduce using rule 30 (comando -> procedure_call .)


state 27

    (31) comando -> if_comando .

    END             reduce using rule 31 (comando -> if_comando .)
    ;               reduce using rule 31 (comando -> if_comando .)
    UNTIL           reduce using rule 31 (comando -> if_comando .)
    ELSE            reduce using rule 31 (comando -> if_comando .)


state 28

    (32) comando -> while_comando .

    END             reduce using rule 32 (comando -> while_comando .)
    ;               reduce using rule 32 (comando -> while_comando .)
    UNTIL           reduce using rule 32 (comando -> while_comando .)
    ELSE            reduce using rule 32 (comando -> while_comando .)


state 29

    (33) comando -> for_comando .

    END             reduce using rule 33 (comando -> for_comando .)
    ;               reduce using rule 33 (comando -> for_comando .)
    UNTIL           reduce using rule 33 (comando -> for_comando .)
    ELSE            reduce using rule 33 (comando -> for_comando .)


state 30

    (34) comando -> io_comando .

    END             reduce using rule 34 (comando -> io_comando .)
    ;               reduce using rule 34 (comando -> io_comando .)
    UNTIL           reduce using rule 34 (comando -> io_comando .)
    ELSE            reduce using rule 34 (comando -> io_comando .)


state 31

    (35) comando -> repeat_comando .

    END             reduce using rule 35 (comando -> repeat_comando .)
    ;               reduce using rule 35 (comando -> repeat_comando .)
    UNTIL           reduce using rule 35 (comando -> repeat_comando .)
    ELSE            reduce using rule 35 (comando -> repeat_comando .)


state 32

    (36) comando -> conteudo .

    END             reduce using rule 36 (comando -> conteudo .)
    ;               reduce using rule 36 (comando -> conteudo .)
    UNTIL           reduce using rule 36 (comando -> conteudo .)
    ELSE            reduce using rule 36 (comando -> conteudo .)


state 33

    (38) assignment -> variavel . ASSIGN exp

    ASSIGN          shift and go to state 52


state 34

    (41) procedure_call -> ID . ( args_subp )
    (39) variavel -> ID .
    (40) variavel -> ID . [ exp ]

    (               shift and go to state 53
    ASSIGN          reduce using rule 39 (variavel -> ID .)
    [               shift and go to state 54


state 35

    (44) if_comando -> IF . exp THEN comando
    (45) if_comando -> IF . exp THEN comando ELSE comando
    (58) exp -> . exp_simples
    (59) exp -> . exp_simples = exp_simples
    (60) exp -> . exp_simples NEQ exp_simples
    (61) exp -> . exp_simples < exp_simples
    (62) exp -> . exp_simples > exp_simples
    (63) exp -> . exp_simples LE exp_simples
    (64) exp -> . exp_simples GE exp_simples
    (65) exp_simples -> . exp_simples + term
    (66) exp_simples -> . exp_simples - term
    (67) exp_simples -> . exp_simples OR term
    (68) exp_simples -> . term
    (69) term -> . term * factor
    (70) term -> . term / factor
    (71) term -> . term DIV factor
    (72) term -> . term MOD factor
    (73) term -> . term AND factor
    (74) term -> . factor
    (75) factor -> . variavel
    (76) factor -> . INT_VAL
    (77) factor -> . REAL_VAL
    (78) factor -> . STRING_LITERAL
    (79) factor -> . TRUE
    (80) factor -> . FALSE
    (81) factor -> . ( exp )
    (82) factor -> . NOT factor
    (83) factor -> . - factor
    (84) factor -> . LENGTH ( exp )
    (85) factor -> . function_call
    (39) variavel -> . ID
    (40) variavel -> . ID [ exp ]
    (86) function_call -> . ID ( args_subp )

    INT_VAL         shift and go to state 61
    REAL_VAL        shift and go to state 62
    STRING_LITERAL  shift and go to state 63
    TRUE            shift and go to state 64
    FALSE           shift and go to state 65
    (               shift and go to state 66
    NOT             shift and go to state 67
    -               shift and go to state 58
    LENGTH          shift and go to state 68
    ID              shift and go to state 70

    exp                            shift and go to state 55
    exp_simples                    shift and go to state 56
    term                           shift and go to state 57
    factor                         shift and go to state 59
    variavel                       shift and go to state 60
    function_call                  shift and go to state 69

state 36

    (46) while_comando -> WHILE . exp DO comando
    (58) exp -> . exp_simples
    (59) exp -> . exp_simples = exp_simples
    (60) exp -> . exp_simples NEQ exp_simples
    (61) exp -> . exp_simples < exp_simples
    (62) exp -> . exp_simples > exp_simples
    (63) exp -> . exp_simples LE exp_simples
    (64) exp -> . exp_simples GE exp_simples
    (65) exp_simples -> . exp_simples + term
    (66) exp_simples -> . exp_simples - term
    (67) exp_simples -> . exp_simples OR term
    (68) exp_simples -> . term
    (69) term -> . term * factor
    (70) term -> . term / factor
    (71) term -> . term DIV factor
    (72) term -> . term MOD factor
    (73) term -> . term AND factor
    (74) term -> . factor
    (75) factor -> . variavel
    (76) factor -> . INT_VAL
    (77) factor -> . REAL_VAL
    (78) factor -> . STRING_LITERAL
    (79) factor -> . TRUE
    (80) factor -> . FALSE
    (81) factor -> . ( exp )
    (82) factor -> . NOT factor
    (83) factor -> . - factor
    (84) factor -> . LENGTH ( exp )
    (85) factor -> . function_call
    (39) variavel -> . ID
    (40) variavel -> . ID [ exp ]
    (86) function_call -> . ID ( args_subp )

    INT_VAL         shift and go to state 61
    REAL_VAL        shift and go to state 62
    STRING_LITERAL  shift and go to state 63
    TRUE            shift and go to state 64
    FALSE           shift and go to state 65
    (               shift and go to state 66
    NOT             shift and go to state 67
    -               shift and go to state 58
    LENGTH          shift and go to state 68
    ID              shift and go to state 70
